# tree-sitter-hammer

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-hammer.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hammer/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHammer/: hammer.h
bindings/swift/TreeSitterHammerTests/: TreeSitterHammerTests.swift
queries/: brackets.scm  highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: example.hm
test/corpus/: statements.txt
