[package]
name = "tree-sitter-hammer"
description = "A tree-sitter parser for hammer"
version = "0.1.0"
authors = ["shelter-kytty <152751739+shelter-kytty@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hammer"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/shelter-kytty/tree-sitter-hammer"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
